更新知识库

--- a/js面试题/JS变量提升.html
+++ b/js面试题/JS变量提升.html
@@ -72,6 +72,7 @@ console.log('======================')
 				console.log(b)
 			}
 			test2(1)
+
 			/*
 			* AO = {
 			* 1.找形参，变量声明,赋值undefined
@@ -83,13 +84,13 @@ console.log('======================')
 			*   b: function b(){};
 			*   d: function d(){};
 			* 4.执行函数
-			*   输入a => 1
+			*   输出a => 1
 			*   c: 0
 			*   a: 5
 			*   b: 6
-			*   输入a => 5
-			*   输入b => 6
-			*   输入b => 6
+			*   输出a => 5
+			*   输出b => 6
+			*   输出b => 6
 			* }
 			*/
 
