--- a/js面试题/index.html
+++ b/js面试题/index.html
@@ -10,6 +10,13 @@
   <!-- <script src="./数据类型检测.js"></script> -->
   <!-- <script src="./js循环的对比及性能分析.js"></script> -->
   <!-- <script src="./浅谈你对this的了解及应用场景.js"></script> -->
-  <script src="./从输入URL地址到看到页面，中间经历了啥.js"></script>
+  <!-- <script src="./从输入URL地址到看到页面，中间经历了啥.js"></script> -->
+  <!-- <script src="./浅深拷贝.js"></script> -->
+  <!-- <script src="./对象合并.js"></script> -->
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
+  <!-- <script src="./ajax、axiox、fetch的区别.js"></script> -->
+  <!-- <script src="./js实现ajax并发数量控制的方案.js"></script> -->
+  <script src="./数组扁平化.js"></script>
 </body>
 </html>
