--- a/数组的扁平化.html
+++ b/数组的扁平化.html
@@ -22,20 +22,28 @@
         console.log(flatArr([1,3,9,'9',5,[9,9,4],[1,[2,[3,[4]]]]]))
 
         // 2.回调轮询进行扁平化
-        function flatArrNew(arr) {
-          let arrNew = []
-          (function flat(arr){
-            arr.forEach((item) => {
-              if(Object.prototype.toString.call(item).slice(8,-1) === 'Array') {
-                flat(item)
-                return
+        function flatArrNew(arr){
+          let result = []
+
+          let fn = (arr) => {
+            for(let i=0; i<arr.length; i++){
+              let item = arr[i]
+              let type = Object.prototype.toString.call(item).slice(8, -1)
+              if(type === 'Array'){
+                // console.log(item)
+                fn(item)
+                continue
+              } else {
+
+                result.push(item)
               }
-              arrNew.push(item)
-            })
-            return arrNew
-          })(arr)
+            }
+          }
+          fn(arr)
+
+          return result
         }
-        console.log(flatArr([1,3,9,'9',5,[9,9,4],[1,[2,[3,[4]]]]]))
+        console.log(flatArrNew([1,3,9,'9',5,[9,9,4],[1,[2,[3,[4]]]]]))
     </script>
 </body>
 
