--- a/js面试题/index.html
+++ b/js面试题/index.html
@@ -17,6 +17,7 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
   <!-- <script src="./ajax、axiox、fetch的区别.js"></script> -->
   <!-- <script src="./js实现ajax并发数量控制的方案.js"></script> -->
-  <script src="./数组扁平化.js"></script>
+  <!-- <script src="./数组扁平化.js"></script> -->
+  <script src="./generator&iterator.js"></script>
 </body>
 </html>
